--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -171,11 +171,11 @@ ldp_all_sex$sex<- factor(ldp_all_sex$sex, levels = c("Male", "Female"))
 
 pds_all_sex <- pds_all %>% group_by(geog, fy, sex) %>% filter(sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown") %>% 
   summarise(total_referrals = sum(referrals), .groups = "drop") %>% 
-complete(nesting(geog, fy), sex, fill = list(total_referrals = 0))  %>% mutate(sex = substring(sex, 4))
+complete(nesting(geog, fy), sex, fill = list(total_referrals = 0)) %>% mutate(sex = substring(sex, 4))
 
 pds_all_sex$sex<- factor(pds_all_sex$sex, levels = c("Male", "Female"))
 
-#prepare population rate data with age groups
+#prepare population rate data for gender
 
 pop_data_sex <- pop_data %>% filter(age_grp == "All", age_grp_2 == "All", sex != "All") %>% select(-age_grp, -age_grp_2) %>% mutate(sex = substring(sex, 4))
 
@@ -194,6 +194,61 @@ pds_all_sex_rates <- left_join(pds_all_sex_rates,
 pds_all_sex_rates %>% filter(geog == "Scotland") %>% select(fy, sex, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
 
 pds_all_sex_rates$sex<- factor(pds_all_sex_rates$sex, levels = c("Male", "Female"))
+
+
+# with large age groups
+ldp_all_sex_2 <- bind_rows(
+  pds_all %>%
+  filter(fy %in% full_years, sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>%
+  group_by(geog, fy, sex, age_grp_2, ldp) %>% 
+    summarise(total_referrals = sum(referrals), .groups = "drop"),
+  pds_all %>%
+  filter(fy %in% full_years, sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>% 
+  group_by(geog, fy, sex, age_grp_2 = "All", ldp) %>% 
+    summarise(total_referrals = sum(referrals), .groups = "drop"))%>% 
+  pivot_wider(names_from = ldp, values_from = total_referrals, values_fill = 0) %>% 
+  mutate(perc_met = round((complete + exempt)/(complete + exempt + fail)*100,1)) %>% 
+complete(nesting(geog, fy), sex, fill = list(perc_met = NA))
+
+ldp_all_sex_2 <- left_join(ldp_all_sex_2,
+ldp_all_sex_2 %>% filter(geog == "Scotland") %>% select(fy, sex, age_grp_2, perc_met) %>% 
+  rename(scot_perc_met = perc_met)) %>% mutate(sex = substring(sex, 4))
+
+ldp_all_sex_2$age_grp_2<- factor(ldp_all_sex_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+ldp_all_sex_2$sex<- factor(ldp_all_sex_2$sex, levels = c("Male", "Female"))
+
+
+pds_all_sex_2 <- bind_rows(
+  pds_all %>% group_by(geog, fy, sex, age_grp_2) %>% filter(sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>% 
+  summarise(total_referrals = sum(referrals), .groups = "drop"),
+pds_all %>% group_by(geog, fy, sex, age_grp_2 = "All") %>% filter(sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>% 
+  summarise(total_referrals = sum(referrals), .groups = "drop")) %>% 
+complete(nesting(geog, fy), sex, age_grp_2, fill = list(total_referrals = 0)) %>% mutate(sex = substring(sex, 4))
+
+
+pds_all_sex_2$age_grp_2<- factor(pds_all_sex_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+pds_all_sex_2$sex<- factor(pds_all_sex_2$sex, levels = c("Male", "Female"))
+
+
+#prepare population rate data for gender with large age groups
+pop_data_sex_2 <- pop_data %>% filter(age_grp == "All", sex != "All") %>% select(-age_grp) %>% mutate(sex = substring(sex, 4))
+
+pds_all_sex_2_cal_year <- pds_all_sex_2 %>% 
+  mutate(year = as.numeric(substr(fy, 1, 4)))
+
+pds_all_sex_2_rates <- left_join(pds_all_sex_2_cal_year, pop_data_sex_2) %>% select(-year) %>%
+  mutate(pop_rate_10000 = round((total_referrals/pop_est)*10000, 1))
+
+pds_all_sex_2_rates$geog <- factor(pds_all_sex_2_rates$geog, levels = unique(pds_all_sex_2_rates$geog))
+pds_all_sex_2_rates$sex <- as.factor(pds_all_sex_2_rates$sex)
+
+pds_all_sex_2_rates %<>% complete(nesting(geog, fy), age_grp_2, sex, fill = list(pop_est = NA, pop_rate_10000 = NA)) 
+
+pds_all_sex_2_rates <- left_join(pds_all_sex_2_rates,
+pds_all_sex_2_rates %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, sex, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
+
+pds_all_sex_2_rates$sex<- factor(pds_all_sex_2_rates$sex, levels = c("Male", "Female"))
+
 
 
 #prepare simd data
@@ -783,7 +838,8 @@ Row {.tabset data-height=860}
 
 ### **Integration Authority Areas**
 ```{r dropdown-prop-sex-ijb}
-pds_sex_data_ijb <- SharedData$new(pds_all_sex %>% filter(!grepl("NHS", geog)), key = ~fy, group = "sex_prop_ijb")
+pds_sex_data_ijb <- SharedData$new(pds_all_sex_2 %>% filter(!grepl("NHS", geog)) %>% mutate(key = paste0(age_grp_2,fy)),
+                                   key = ~key, group = "sex_prop_ijb")
 
 data_filter_sex_prop_ijb <- filter_select(id = "filter_sex_prop_ijb",
                                     label = "Select Financial Year of Diagnosis:",
@@ -791,10 +847,17 @@ data_filter_sex_prop_ijb <- filter_select(id = "filter_sex_prop_ijb",
                                     sharedData = pds_sex_data_ijb,
                                     multiple = FALSE
                                    )
-bscols(widths = c(1,5,NA),
-       NULL,
-       data_filter_sex_prop_ijb,
-       NULL)
+
+data_filter_age_prop_ijb <- filter_select(id = "filter_sex_prop_age_ijb",
+                                    label = "Select Age Group:",
+                                    group = ~age_grp_2,
+                                    sharedData = pds_sex_data_ijb,
+                                    multiple = FALSE
+                                   )
+
+bscols(widths = c(1,4,4,NA),NULL,
+data_filter_sex_prop_ijb,
+data_filter_age_prop_ijb,NULL)
 
 ```
 
@@ -810,7 +873,7 @@ div(id="sexproplegend", plot_prop_legend(pds_all_sex %>% filter(geog == "Scotlan
 ```{r plot-prop-sex-ijb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_sex_data_ijb, measure = sex, measure_text = "Gender: ", xlabel = "Integration Authority Area")
+      plot_prop_2(pds_sex_data_ijb, measure = sex, measure_text = "Gender: ", xlabel = "Integration Authority Area")
 )
 )
 
@@ -819,15 +882,20 @@ bscols(widths = 12,
 
 ```{r trend-table-prop-sex-ijb}
 
-pds_prop_sex_table_data_ijb <- pds_all_sex %>% filter(!grepl("NHS", geog)) %>% group_by(geog, fy) %>% 
-  mutate(perc_referrals = paste0(round((total_referrals/sum(total_referrals))*100,0),"%")) %>% ungroup() %>%   select(-total_referrals) %>% 
+pds_prop_sex_table_data_ijb <- pds_all_sex_2 %>% filter(!grepl("NHS", geog)) %>%
+  mutate(key = paste0(age_grp_2,fy)) %>% 
+  group_by(geog, fy, age_grp_2) %>% 
+  mutate(perc_referrals = paste0(round((total_referrals/sum(total_referrals))*100,0),"%")) %>%
+  mutate(perc_referrals = if_else(perc_referrals == "NaN%", "-", perc_referrals)) %>%
+  ungroup() %>%
+  select(-total_referrals) %>% 
   pivot_wider(names_from = geog, values_from = perc_referrals) %>%
              rename(`Gender` = sex)
 
 pds_prop_sex_table_data_ijb[is.na(pds_prop_sex_table_data_ijb)] <- "0%"
 
 
-pds_prop_sex_table_ijb <- SharedData$new(pds_prop_sex_table_data_ijb, key = ~fy, group = "sex_prop_ijb")
+pds_prop_sex_table_ijb <- SharedData$new(pds_prop_sex_table_data_ijb, key = ~key, group = "sex_prop_ijb")
 
 bscols(widths = 12,
        div(style = css(width="98%", height="200px", margin="15px"),
@@ -838,15 +906,12 @@ bscols(widths = 12,
                              scrollY = FALSE,
                              dom = "t",
                              ordering = FALSE,
-                             columnDefs = list(list(visible = FALSE, targets = 0),
-                                               list(className = 'dt-right', targets = 2:33)
+                             columnDefs = list(list(visible = FALSE, targets = c(0,2,3)),
+                                               list(className = 'dt-right', targets = 2:35)
                              ))) %>%
-  DT::formatStyle(2, fontWeight = "bold", padding = "4px"
-                  )
+  DT::formatStyle(2, fontWeight = "bold")
             )
        )
-
-
 
 
 ```
@@ -854,19 +919,26 @@ bscols(widths = 12,
 ### **Health Boards**
 
 ```{r dropdown-prop-sex-hb}
-pds_sex_data_hb <- SharedData$new(pds_all_sex %>% filter(geog == "Scotland" | grepl("NHS", geog)),
-                                   key = ~fy, group = "sex_prop_hb")
+pds_sex_data_hb <- SharedData$new(pds_all_sex_2 %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>% mutate(key = paste0(age_grp_2,fy)),
+                                   key = ~key, group = "sex_prop_hb")
 
-data_filter_sex_prop <- filter_select(id = "filter_sex_prop_hb",
+data_filter_sex_prop_hb <- filter_select(id = "filter_sex_prop_hb",
                                     label = "Select Financial Year of Diagnosis:",
                                     group = ~fy,
                                     sharedData = pds_sex_data_hb,
                                     multiple = FALSE
                                    )
-bscols(widths = c(1,5,NA),
-       NULL,
-       data_filter_sex_prop,
-       NULL)
+
+data_filter_age_prop_hb <- filter_select(id = "filter_sex_prop_age_hb",
+                                    label = "Select Age Group:",
+                                    group = ~age_grp_2,
+                                    sharedData = pds_sex_data_hb,
+                                    multiple = FALSE
+                                   )
+
+bscols(widths = c(1,4,4,NA),NULL,
+data_filter_sex_prop_hb,
+data_filter_age_prop_hb,NULL)
 
 ```
 
@@ -883,7 +955,7 @@ div(id="sexproplegend", plot_prop_legend(pds_all_sex %>% filter(geog == "Scotlan
 ```{r plot-prop-sex-hb}
 bscols(widths = 12,
   div(style = css(width="98%", height="410px"),
-      plot_prop(pds_sex_data_hb, measure = sex, measure_text = "Gender: ", xlabel = "Health Board")
+      plot_prop_2(pds_sex_data_hb, measure = sex, measure_text = "Gender: ", xlabel = "Health Board")
 )
 )
 
@@ -892,9 +964,11 @@ bscols(widths = 12,
 
 ```{r trend-table-prop-sex-hb}
 
-pds_prop_sex_table_data_hb <- pds_all_sex %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
-  group_by(geog, fy) %>% 
+pds_prop_sex_table_data_hb <- pds_all_sex_2 %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
+  mutate(key = paste0(age_grp_2,fy)) %>% 
+  group_by(geog, fy, age_grp_2) %>% 
     mutate(perc_referrals = paste0(round((total_referrals/sum(total_referrals))*100,0),"%")) %>%
+    mutate(perc_referrals = if_else(perc_referrals == "NaN%", "-", perc_referrals)) %>%
     ungroup() %>% 
   select(-total_referrals) %>% 
   pivot_wider(names_from = geog, values_from = perc_referrals) %>%
@@ -903,7 +977,7 @@ pds_prop_sex_table_data_hb <- pds_all_sex %>% filter(geog == "Scotland" | grepl(
 pds_prop_sex_table_data_hb[is.na(pds_prop_sex_table_data_hb)] <- "0%"
 
 
-pds_prop_sex_table_hb <- SharedData$new(pds_prop_sex_table_data_hb, key = ~fy, group = "sex_prop_hb")
+pds_prop_sex_table_hb <- SharedData$new(pds_prop_sex_table_data_hb, key = ~key, group = "sex_prop_hb")
 
 bscols(widths = 12,
        div(style = css(width="98%", height="240px", margin="15px"),
@@ -914,16 +988,12 @@ bscols(widths = 12,
                              scrollY = FALSE,
                              dom = "t",
                              ordering = FALSE,
-                             columnDefs = list(list(visible = FALSE, targets = 0),
-                                               list(className = 'dt-right', targets = 2:16)
+                             columnDefs = list(list(visible = FALSE, targets = c(0,2,3)),
+                                               list(className = 'dt-right', targets = 2:18)
                              ))) %>%
-  DT::formatStyle(2, fontWeight = "bold"#, padding = "4px"
-                  )
+  DT::formatStyle(2, fontWeight = "bold")
             )
        )
-
-
-
 
 ```
 
@@ -1918,10 +1988,22 @@ function filter_default() {
   document.getElementById("filter_sex_prop_hb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
+  document.getElementById("filter_sex_prop_age_hb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("All", false);
+
+  document.getElementById("filter_sex_prop_age_hb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
    document.getElementById("filter_sex_prop_ijb").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
   document.getElementById("filter_sex_prop_ijb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_sex_prop_age_ijb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("All", false);
+
+  document.getElementById("filter_sex_prop_age_ijb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
   document.getElementById("filter_trend_sex_pop").getElementsByClassName("selectized") 
